--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-table": "^8.21.3",
+    "@types/react-csv": "^1.1.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.561.0",
     "next-themes": "^0.4.6",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
+    "react-csv": "^2.2.2",
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
