--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.561.0",
     "next-themes": "^0.4.6",
     "prop-types": "^15.8.1",
